--- a/.github/workflows/microbit.yml
+++ b/.github/workflows/microbit.yml
@@ -1,19 +1,10 @@
 name: microbit
 
-on:
-  push:
-  schedule:
-    - cron: '0 0 5,20 * *'
+on: [push]
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
-    steps:
-      - run: echo "${{ github.event.head_commit.message }}"
-        
   build:
-    needs: prepare
+
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,16 +17,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: microbit pxt.json  
-        uses: datamonsters/replace-action@master
-        with:
-          files: 'pxt.json'
-          replacements: 'core=microbit' 
-      - name: microbit compilation
+      - name: npm install
         run: |
           npm install -g pxt
           pxt target microbit
+      - name: build
+        run: |
           pxt install
           pxt build --cloud
         env:
